Make sure to clamp scroll positions when restoring them

This was an oversight from https://codereview.chromium.org/1846023003

R=leviw@chromium.org
BUG=600234

Review URL: https://codereview.chromium.org/1852293002

Cr-Commit-Position: refs/heads/master@{#384957}

Former-commit-id: 87c6ba998684a8e2f6866e55e8d6ee5229cbde36